--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,6 @@ jobs:
       - name: Echo the message
         run: |
           echo "HOLAAAAAAA"
+      - name: Dime la fecha
+        run: date
+      - run: ls -l
