--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -9,7 +9,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: acctions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fech-depth: 0
       - uses: actions/setup-node@v3
