--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -16,6 +16,6 @@ jobs:
         with:
           node-version: '18'
       - name: Install dependences
-        run: npm Install
+        run: npm install
       - name: Lint
         run: npm install eslint
