--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -16,6 +16,10 @@ jobs:
         with:
           node-version: '18'
       - name: Install dependences
-        run: npm install
+        run: npm install --no-audit --no-fund --no-optional
       - name: Lint
         run: npm install eslint
+      - name: Build
+        run: npm install build
+      - name: Test
+        run: npm install test
